--- a/Index.html
+++ b/Index.html
@@ -1,15 +1,17 @@
 <html>
 <head>
     <title>My website</title>
-    <link type="text/css" href="css/style.css" rel="stylesheet">
+    <link type="text/css" href="Style.css" rel="stylesheet">
+    <link type="text/css" href="style1.css" rel="stylesheet">
+    
  </head>
 <body>
      <header id="main-header">
      	 <div class="container">
 			  <h1>Assignment_2</h1>
 			  <ul>
-				<li><a href="login.php">Login</a></li>
-				<li><a href="#">Register</a></li>
+				<li><a href="Login.php">Login</a></li>
+				<li><a href="Registration.php">Register</a></li>
 				</ul>
 </header>
  <nav id="nav-bar">
@@ -17,8 +19,8 @@
      	 <ul>
      	 	<li><a href="#">About</a></li>
      	     <li><a href="#">Blog</a></li>
-     	     <li><a href="#">Work with us</a></li>
-			  <li><a href="#">Contact us</a></li>
+     	     <li><a href="#">Post</a></li>
+	<li><a href="#">Contact us</a></li>
 			  
      	 </ul>
    	</div>
@@ -35,18 +37,14 @@
  </section>
 <div class="container">
   <section id="main">
-  	<h1>Making investing <span class="yellow">easy</span></h1>
+  	<h1>Text Header <span class="yellow">easy</span></h1>
   	<p> 
-		Having an investment portfolio is easy—no matter how much money you have.
-		There’s heaps of choice, with more than 165 companies and funds to choose from.
+		context
 	</p>
   
   </section>
 
-<aside id="sidebar">
-	<p>“The idea the Stock market is just for the wealthy is going.”</p>
 
-</aside>
 </div>
 
 
