--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
 					<li><a href="Registration.php"><span class="glyphicon glyphicon-log-in"></span> Register</a></li>
 				</ul>
 			</div>
-		</nav>    
+		</nav>   
+		<div class="heading">
+			<h1 style="text-align: center;">About Us</h1>
+			<h3 style="text-align: center;"> Hello everyone we are giving you several functionalities related to job posting and bidding.
+			</h3>
+			
+
+		</div> 
 </body>
 </head>
 </html>
